--- a/week8.html
+++ b/week8.html
@@ -13,6 +13,11 @@
     <div id="box2">div2</div>
     <div id="box3">div3</div>
     <div id="box4">div4</div>
+    <div id="container">
+        <div id="box">div1</div>
+        <div id="box">div2</div>
+        <div id="box">div3</div>
+    </div>
   
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim doloribus earum soluta porro non et incidunt ex, fugit pariatur esse, maiores eos vel voluptatibus cum quos dolore unde! Unde, architecto.
     Sed provident atque optio aperiam autem eveniet incidunt modi eos minus rerum voluptatem quis maiores corporis voluptate, laborum quisquam laboriosam velit nesciunt id! Sint odit ipsum quasi repudiandae qui id.
